# recommend_agent

./: .env.example  .gitignore  README.md  __init__.py  alembic.ini  config.py  logging.yaml  main.py  pyproject.toml  test_detect_intent.py
agents/: __init__.py  compliance_subgraph.py  main_graph.py  profile_subgraph.py  recommendation_subgraph.py
alembic/: env.py
alembic/versions/: .gitkeep  2026_04_18_2041-7747b04a6ab1_create_initial_schema.py  2026_04_19_1200-add_warm_data_layer_fields.py  (+1 more)
api/: __init__.py
data/: README.md  insurance_products.json  insurance_terminology.json
docs/: database_setup.md  langfuse_integration.md  langsmith_integration.md  models_overview.md  redis_configuration.md
examples/: langfuse_example.py  langsmith_example.py  short_term_memory_example.py  warm_data_layer_example.py
mcp_servers/: __init__.py
memory/: CONTEXT_ISOLATION.md  LANGGRAPH_ALTERNATIVES_ANALYSIS.md  README.md  REFACTORED_ARCHITECTURE.md  SHORT_TERM_MEMORY_INTEGRATION.md  STATE_PARTITIONING.md  __init__.py  short_term_memory.py  warm_data_layer.py
models/: __init__.py  agent_state.py  compliance.py  conversation.py  db_models.py  intent.py  product.py  subgraph_states.py  user.py
scripts/: __init__.py  check_environment.py  init_faiss_index.py  seed_products.py  setup_store.py  test_redis_connection.py
skills/: __init__.py  insurance_domain.py
tests/: __init__.py
tools/: __init__.py  financial_calculator.py
utils/: __init__.py  checkpointer.py  faiss_index.py  langfuse_config.py  langsmith_config.py  redis_client.py  store_manager.py
(+29 files in other folders)
